--- a/index.css
+++ b/index.css
@@ -1,59 +1,93 @@
 *{
-    margin:0;
     padding: 0;
-    font-family:'poppins',sans-serif;
+    margin: 0;
     box-sizing: border-box;
 }
-.heading{
-    color: #ec9f33;
-    margin-bottom: 10;
-    text-align: center;
-}
-
-.container{
+header{
     width: 100%;
     height: 100vh;
-    background: #0d657d;
+    background:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.2)),url(/bgimg.jpg);
+    background-size: cover;
+    font-family:sans-serif ;
+}
+nav{
+    width: 100%;
+    height: 100px;
+    color: rgb(225, 165, 15);
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
 }
-.calculator{
-    background: black;
-    padding: 20px;
+.logo{
+    font-size: 25px;
+    letter-spacing: 2px;
+}
+.menu a{
+    text-decoration: none;
+    color: rgb(216, 170, 31);
+    padding: 10px 10px ;
+    font-size: 20px;
+    position: relative;
+}
+.menu a:before{
+    content: '';
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    border-bottom: 2px solid red;
+    transition: 0.3s linear;
+}
+.menu a:hover:before{
+    width: 100%;
+}
+.register a{
+    text-decoration: none;
+    color: white;
+    padding: 10px 10px;
+    font-size: 20px;
+    background: rgb(59, 26, 226);
+    border-radius: 8px;
+    transition: 0.1s;
+    -webkit-transition: 0.1s;
+    -moz-transition: 0.1s;
+    -ms-transition: 0.1s;
+    -o-transition: 0.1s;
+}
+.register a:hover{
+    background: red;
+    border: 1px solid white;
+}
+.h-text{
+    max-width: 650px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) ;
+    text-align: center;
+    color: white;
+}
+.h-text span{
+    letter-spacing: 5px;
+}
+.h-text h1{
+    font-size: 3.5em;
+}
+.h-text a{
+    text-decoration:none;
+    color: white;
+    background: blue;
+    padding:10px 10px ;
+    letter-spacing: 5px;
+    transition: 0.1s;
     border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
- 
-.calculator form input{
-    border: 0;
-    outline: 0;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    font-size: 22px;
-    cursor:pointer;
-    margin: 5px;
-    
-}
-
-.red{
-    background: #FF9500;
-}
-
-.grey{
-    background: #D4D4D2;
-}
-.display{
-    display: flex;
-    justify-content: flex-end;
-    margin: 20px 0 ;
-
-}
-form .display input{
-    text-align: right;
-    flex: 1;
-    border-radius: 10px;
-    font-size: 45px;
-    background: #D4D4D2;
-    box-shadow: none;
+.h-text a:hover{
+    background: red;
+    border: 1px solid white;
 }
